# _b_logger

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.webhook  LICENSE  README.md  Taskfile.yml  compose.yml  config.example.toml  config.toml  config.toml.example  diesel.toml  package-lock.json  package.json
.ai/: api-contracts.md  architecture.md  codebase-map.md  context.md  decisions.md  state.md
.ai/adrs/: 001_adr_protobuf-as-single-source-of-truth.md  002_adr_shared-rust-core-library.md  003_adr_monorepo-with-workspaces.md  004_adr_axum-and-tonic-for-backend.md  005_adr_rest-gateway-for-web-clients.md  006_adr_postgresql-with-jsonb-for-context-storage.md  007_adr_webassembly-and-ffi-for-cross-platform-logic.md  008_adr_rest-with-protobuf-payloads.md
backend/api/: Cargo.toml  diesel.toml
backend/api/migrations/2025-10-04-192608-0000_create_blog_tables/: up.sql
backend/api/migrations/2025-10-04-231121-0000_create_users/: down.sql  up.sql
backend/api/migrations/2025-10-04-231330-0000_create_roles/: down.sql  up.sql
backend/api/migrations/2025-10-04-231851-0000_create_user_roles/: down.sql  up.sql
backend/api/migrations/2025-10-04-232059-0000_create_open_id_credentials/: down.sql  up.sql
backend/api/migrations/2025-10-04-233019-0000_create_tags/: down.sql  up.sql
backend/api/migrations/2025-10-04-233129-0000_create_posts/: up.sql
backend/api/migrations/2025-10-04-233516-0000_create_post_tags/: down.sql  up.sql
backend/api/migrations/2025-10-04-233728-0000_create_post_links/: down.sql  up.sql
backend/api/migrations/2025-10-04-233944-0000_create_comments/: up.sql
backend/api/migrations/2025-10-07-053914-0000_create_user_groups/: down.sql  up.sql
backend/api/migrations/2025-10-07-053954-0000_create_user_group_members/: down.sql  up.sql
backend/api/src/: config.rs  db.rs  lib.rs  main.rs  middleware.rs  openapi.rs  response.rs  schema.rs
backend/api/src/models/: comment.rs  mod.rs  open_id_credential.rs  post.rs  post_link.rs  post_tag.rs  role.rs  tag.rs  user.rs  user_group.rs  user_group_member.rs  user_role.rs
backend/api/src/routes/: mod.rs  timeline.rs  user_groups.rs  users.rs
backend/macro/: Cargo.toml
backend/scripts/: Cargo.toml
backend/scripts/src/: generate_openapi.rs  seed.rs
backend/webhook-server/: Cargo.toml
backend/webhook-server/src/: main.rs
client/: README.md  package-lock.json  package.json
examples/: .env.example
frontend/admin/: README.md  package-lock.json  package.json  vite.config.ts
frontend/lib/: .gitignore  client.ts  package.json
frontend/web/: .env.production  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/web/src/: App.vue  main.ts
frontend/web/src/api/: client.ts
frontend/web/src/assets/: main.css
frontend/web/src/lib/: timeline.ts  (+1 more)
scripts/: deploy.sh  dev.py  init.py  sync-config.py  wrapper.py
server/: Cargo.toml
server/src/: main.rs
(+16 files in other folders)
