[package]
name = "blogger-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.42", features = ["full"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v7", "serde"] }
thiserror = "2.0.17"