[package]
name = "blogger-scripts"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "generate-openapi"
path = "src/generate_openapi.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[dependencies]
blogger-api = { path = "../api" }
utoipa = "5.3"
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
chrono = "0.4"
uuid = { version = "1.11", features = ["v7"] }
fake = { version = "4.4.0", features = ["chrono", "uuid"] }
rand = "0.8"
