[package]
name = "blogger-webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
